# SchiffeVersenken

./: .clang-format  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  format-all.sh  generateBuildScript.sh  run.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: clang-format-checker.yml  codeql-analysis.yml  compiletest.yml  lock.yml
include/: ai.hpp  board-generator.hpp  boardpoint.hpp  fieldinfo.hpp  gamelogic.hpp  global-config.hpp  global-config.hpp.in  input.hpp  output.hpp
src/: ai.cpp  board-generator.cpp  boardpoint.cpp  gamelogic.cpp  input.cpp  main.cpp  output.cpp  test-input.cpp
tests/: test-ai.cpp  test-generator.cpp  test-input.cpp  test-output.cpp
